--- a/index.html
+++ b/index.html
@@ -48,14 +48,28 @@ span {
   50%  {opacity: 0.5;}
   75%  {opacity: 1;}
 }
+@media (max-width: 900px) {
+    div {
+  color: #8002f5;
+  font-family: Monaco, monospace;
+  font-size: .9rem;
+  width: 80%;
+  text-align: center;
+  position: absolute;
+  top: 13rem;
+  padding: 2rem;
+  animation: 120ms infinite normal glitch;
+  text-align: center;
+}
+}
 
     </style>
 </head>
 <body>
     <!-- <body oncontextmenu="return false" onselectstart="return false" ondragstart="return false"> -->
       <div id="main">█ █ █ <span>█ █ █ █ █ █ █ █ █ █ </span>31%
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&gt; Portfolio Coming Soon !  <span id="Tuned"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <br>&gt; Work-In-Progress&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <br>&nbsp;&nbsp;&nbsp;&nbsp;&gt; Portfolio Coming Soon!<span id="Tuned"></span>
+        <br>&gt; Work-In-Progress
         <br><br><a href="https://www.linkedin.com/in/surajfeb14/"><img src="play.svg" class="filter-purple"/></a>
       </div>
     </body>
