--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suraj here!t</title>
+    <title>Hi! Suraj here</title>
     <style>
         body {
   background: #000;
@@ -62,7 +62,6 @@ span {
   text-align: center;
 }
 }
-
     </style>
 </head>
 <body>
@@ -70,7 +69,7 @@ span {
       <div id="main">█ █ █ <span>█ █ █ █ █ █ █ █ █ █ </span>31%
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&gt; Portfolio Coming Soon!<span id="Tuned"></span>
         <br>&gt; Work-In-Progress
-        <br><br><a href="https://www.linkedin.com/in/surajfeb14/"><img src="play.svg" class="filter-purple"/></a>
+        <br><br><a href="https://linktr.ee/sdasdev"><img src="play.svg" class="filter-purple"/></a>
       </div>
     </body>
 </html>
